--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-3  col-lg-3 col-md-3 col-sm-3">
+                    <div class="col-xxl-3  col-lg-3 col-md-3 col-5">
                         <div class="logo">
                             <a href="#">
                                 <img src="assets/img/logo.png" alt="">
@@ -94,7 +94,7 @@
 
     <main>
 
-        <section>
+        <section class="overflow-banner">
             <div class="main-banner">
                 <img src="assets/img/Mask Group 157.png" alt="">
                 <div class="container">
@@ -124,13 +124,13 @@
 
                     <div class="info-row">
                         <div class="row">
-                            <div class="col-xxl-6 col-lg-6 col-md-5 col-sm-6">
+                            <div class="col-xxl-6 col-lg-6 col-md-5 col-12">
                                 <div class="label">
                                     <span class="font-24">UI/UX Design & Development</span>
                                 </div>
                             </div>
 
-                            <div class="col-xxl-6 col-lg-6 col-md-7 col-sm-6">
+                            <div class="col-xxl-6 col-lg-6 col-md-7 col-12">
                                 <div class="wedo">
                                     <a href="" class="font-20">UI/UX Design</a>
                                     <a href="" class="font-20">Web Development</a>
@@ -145,13 +145,13 @@
 
                     <div class="info-row">
                         <div class="row">
-                            <div class="col-xxl-6 col-lg-6 col-md-5 col-sm-6">
+                            <div class="col-xxl-6 col-lg-6 col-md-5 col-12">
                                 <div class="label">
                                     <span class="font-24">GIS</span>
                                 </div>
                             </div>
 
-                            <div class="col-xxl-6 col-lg-6 col-md-7 col-sm-6">
+                            <div class="col-xxl-6 col-lg-6 col-md-7 col-12">
                                 <div class="wedo">
                                     <a href="" class="font-20">Gis Analysis</a>
                                     <a href="" class="font-20">Map Design</a>
@@ -164,13 +164,13 @@
 
                     <div class="info-row">
                         <div class="row">
-                            <div class="col-xxl-6 col-lg-6 col-md-5 col-sm-6">
+                            <div class="col-xxl-6 col-lg-6 col-md-5 col-12">
                                 <div class="label">
                                     <span class="font-24">Design</span>
                                 </div>
                             </div>
 
-                            <div class="col-xxl-6 col-lg-6 col-md-7 col-sm-6">
+                            <div class="col-xxl-6 col-lg-6 col-md-7 col-12">
                                 <div class="wedo">
                                     <a href="" class="font-20">UI/UX Design</a>
                                     <a href="" class="font-20">Web Development</a>
@@ -187,12 +187,12 @@
         </section>
 
         <section>
-            <div class="home-about-text section-p">
+            <div class="home-about-text section-p about-paddind">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xxl-8 col-lg-8 col-md-8 col-sm-8">
+                        <div class="col-xxl-8 col-lg-8 col-md-8 col-12">
                             <div class="title">
-                                <h2><a href="" class="f-30">About us</a></h2>
+                                <h2><a href="" class="font-30">About us</a></h2>
                             </div>
 
                             <div class="text font-22 line-34">
@@ -206,12 +206,12 @@
                                 Aldus PageMaker including versions of Lorem Ipsum.
                             </div>
 
-                            <div class="link link-dark">
+                            <div class="link link-dark link2">
                                 <a href="" class="font-20">See More</a>
                             </div>
                         </div>
 
-                        <div class="col-xxl-4  col-lg-4 col-md-4 col-sm-4">
+                        <div class="col-xxl-4  col-lg-4 col-md-4 col-12">
                             <div class="bricks">
                                 <div class="brick">
                                     <strong>13+</strong>
@@ -243,7 +243,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -274,7 +274,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -292,7 +292,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -310,7 +310,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -343,50 +343,50 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row">
-                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-3">
+                    <div class="row add-flex">
+                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-4 col-5">
                             <div class="client-card">
                                 <img src="assets/img/client1.png" alt="">
                             </div>
                         </div>
 
-                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-4 col-5">
                             <div class="client-card">
                                 <img src="assets/img/client2.png" alt="">
                             </div>
                         </div>
 
-                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-4 col-5">
                             <div class="client-card">
                                 <img src="assets/img/client3.png" alt="">
                             </div>
                         </div>
 
-                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-4 col-5">
                             <div class="client-card">
                                 <img src="assets/img/client4.png" alt="">
                             </div>
                         </div>
 
-                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-4 col-5">
                             <div class="client-card">
                                 <img src="assets/img/client2.png" alt="">
                             </div>
                         </div>
 
-                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-4 col-5">
                             <div class="client-card">
                                 <img src="assets/img/client3.png" alt="">
                             </div>
                         </div>
 
-                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-4 col-5">
                             <div class="client-card">
                                 <img src="assets/img/client4.png" alt="">
                             </div>
                         </div>
 
-                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-xxl-3 col-lg-3 col-md-3 col-sm-4 col-5">
                             <div class="client-card">
                                 <img src="assets/img/client1.png" alt="">
                             </div>
@@ -399,9 +399,9 @@
         <section>
             <div class="testimonial-section">
                 <div class="container">
-                    <div class="testimonial">
+                    <div class="testimonial test2">
                         <div class="title">
-                            <h2 class="font-30">testimonial</h2>
+                            <h2 class="font-30">Testimonial</h2>
                         </div>
 
                         <div class="space-between">
@@ -488,7 +488,7 @@
                             </div>
                         </div>
 
-                        <div class="link link-dark">
+                        <div class="link link-dark link3">
                             <a href="" class="font-20">See More</a>
                         </div>
 
@@ -582,7 +582,7 @@
         <div class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-12">
                         <div class="footer-information">
                             <span>LET'S TALK</span>
 
@@ -595,7 +595,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-7 marg-t">
                         <div class="footer-menu">
                             <div class="footer-logo">
                                 <a href="">
@@ -605,22 +605,22 @@
 
                             <div class="footer-nav">
                                 <div class="row">
-                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-sm-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">About us</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-sm-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Blog</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-sm-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Service</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-sm-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Products</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-sm-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Projects</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-sm-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Contact</a>
                                     </div>
                                 </div>
