--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
         <div class="header">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-3 col-lg-3 col-md-3">
+                    <div class="col-xxl-3 col-lg-3 col-md-3 col-5">
                         <div class="logo">
                             <a href="#">
                                 <img src="assets/img/logo.png" alt="">
@@ -53,6 +53,34 @@
                             </div>
 
                         </div>
+                    </div>
+                </div>
+                <div class="burger-menu">
+                    <div class="burger-lines">
+                        <div class="burger-line"></div>
+                        <div class="burger-line"></div>
+                        <div class="burger-line"></div>
+                    </div>
+                    <div class="burger-links">
+                        <!-- <div class="burger-search">
+                            <div class="quote burger-quote">
+                                <a href="">Get a Quote</a>
+                            </div>
+                            <div class="search burg-search">
+                                <a class="font-18" href="">
+                                    Search
+                                </a>
+                            </div>
+                            <div class="lang btn-15 burger-lang">
+                                <a href="" class="font-18" data-menu-name="En">Geo</a>
+                            </div>
+                        </div> -->
+                        <nav class="burger-nav">
+                            <li><a href="" data-menu-name="About">About</a></li>
+                            <li><a href="" data-menu-name="Service">Service</a></li>
+                            <li><a href="" data-menu-name="Projects">Projects</a></li>
+                            <li><a href="" data-menu-name="BLOG">BLOG</a></li>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -96,7 +124,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -122,7 +150,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -140,7 +168,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -158,7 +186,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -209,7 +237,7 @@
         <div class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-12">
                         <div class="footer-information">
                             <span>LET'S TALK</span>
 
@@ -222,7 +250,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-7 marg-t">
                         <div class="footer-menu">
                             <div class="footer-logo">
                                 <a href="">
@@ -232,22 +260,22 @@
 
                             <div class="footer-nav">
                                 <div class="row">
-                                    <div class="col-xxl-4 col-lg-4 col-md-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">About us</a> 
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Blog</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Service</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Products</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Projects</a>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-4 col-md-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Contact</a>
                                     </div>
                                 </div>
@@ -270,6 +298,7 @@
     </footer>
 
     <script src="assets/js/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
