--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,7 @@
                 <div class="container">
                     <div class="title project-title">
                         <h2 class="font-30"><a href="">Projects</a></h2>
-                        <div class="project-menu">
+                        <div class="project-menu project-blog-menu">
                             <button class="font-20 active">All</button>
                             <button class="font-20">Web Design & Development</button>
                             <button class="font-20">Graphic Design</button>
