--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div class="header">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-3 col-lg-3 col-md-3">
+                    <div class="col-xxl-3  col-lg-3 col-md-3 col-5">
                         <div class="logo">
                             <a href="#">
                                 <img src="assets/img/logo.png" alt="">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-9 col-lg-9 col-md-9">
+                    <div class="col-xxl-9 col-lg-9 col-md-9 col-sm-12">
                         <div class="menu-side">
                             <div class="wrap_nav">
                                 <nav class="menu btn-15">
@@ -55,20 +55,47 @@
                         </div>
                     </div>
                 </div>
+                <div class="burger-menu">
+                    <div class="burger-lines">
+                        <div class="burger-line"></div>
+                        <div class="burger-line"></div>
+                        <div class="burger-line"></div>
+                    </div>
+                    <div class="burger-links">
+                        <!-- <div class="burger-search">
+                            <div class="quote burger-quote">
+                                <a href="">Get a Quote</a>
+                            </div>
+                            <div class="search burg-search">
+                                <a class="font-18" href="">
+                                    Search
+                                </a>
+                            </div>
+                            <div class="lang btn-15 burger-lang">
+                                <a href="" class="font-18" data-menu-name="En">Geo</a>
+                            </div>
+                        </div> -->
+                        <nav class="burger-nav">
+                            <li><a href="" data-menu-name="About">About</a></li>
+                            <li><a href="" data-menu-name="Service">Service</a></li>
+                            <li><a href="" data-menu-name="Projects">Projects</a></li>
+                            <li><a href="" data-menu-name="BLOG">BLOG</a></li>
+                        </nav>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
 
     <main>
-
-        <section>
+         <section>
             <div class="contact-page">
                 <div class="container">
-                    <div class="title">
-                        <h2>let's get in touch</h2>
-                    </div>
-                    <div class="row">
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="row flex-col">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-12">
+                            <div class="title">
+                                <h2>let's get in touch</h2>
+                            </div>
                             <div class="contact-form">
                                 <form action="">
                                     <input type="text" placeholder="name">
@@ -83,7 +110,7 @@
                             </div>
                         </div>
     
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-12">
                             <div class="contact-info">
                                 <a href="" class="font-20"><span class="icon-pin"></span>Gvazauris N17, 0192, Tbilisi, georgia</a>
                                 <a href="" class="font-20"><span class="icon-tel"></span>+995 32218 36 25</a>
@@ -144,7 +171,7 @@
         <div class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-12">
                         <div class="footer-information">
                             <span>LET'S TALK</span>
 
@@ -157,7 +184,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-7 marg-t">
                         <div class="footer-menu">
                             <div class="footer-logo">
                                 <a href="">
@@ -167,22 +194,22 @@
 
                             <div class="footer-nav">
                                 <div class="row">
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">About us</a> 
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Blog</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Service</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Products</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Projects</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Contact</a>
                                     </div>
                                 </div>
@@ -205,6 +232,7 @@
     </footer>
 
     <script src="assets/js/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
