--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
         <div class="header">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-3 col-lg-3 col-md-3">
+                    <div class="col-xxl-3  col-lg-3 col-md-3 col-5">
                         <div class="logo">
                             <a href="#">
                                 <img src="assets/img/logo.png" alt="">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-9 col-lg-9 col-md-9">
+                    <div class="col-xxl-9 col-lg-9 col-md-9 col-sm-12">
                         <div class="menu-side">
                             <div class="wrap_nav">
                                 <nav class="menu btn-15">
@@ -53,6 +53,34 @@
                             </div>
 
                         </div>
+                    </div>
+                </div>
+                <div class="burger-menu">
+                    <div class="burger-lines">
+                        <div class="burger-line"></div>
+                        <div class="burger-line"></div>
+                        <div class="burger-line"></div>
+                    </div>
+                    <div class="burger-links">
+                        <!-- <div class="burger-search">
+                            <div class="quote burger-quote">
+                                <a href="">Get a Quote</a>
+                            </div>
+                            <div class="search burg-search">
+                                <a class="font-18" href="">
+                                    Search
+                                </a>
+                            </div>
+                            <div class="lang btn-15 burger-lang">
+                                <a href="" class="font-18" data-menu-name="En">Geo</a>
+                            </div>
+                        </div> -->
+                        <nav class="burger-nav">
+                            <li><a href="" data-menu-name="About">About</a></li>
+                            <li><a href="" data-menu-name="Service">Service</a></li>
+                            <li><a href="" data-menu-name="Projects">Projects</a></li>
+                            <li><a href="" data-menu-name="BLOG">BLOG</a></li>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -94,7 +122,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -120,7 +148,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -138,7 +166,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -156,7 +184,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-6">
+                        <div class="col-xxl-6 col-lg-6 col-md-6 col-6">
                             <div class="project-card">
                                 <a href="">
                                     <div class="image">
@@ -193,7 +221,7 @@
                     <div class="accordion" id="accordionPanelsStayOpenExample">
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                            <button class="accordion-button font-24 line-30" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            <button class="accordion-button font-24 add-font line-30" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
                                 <span>simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard?</span>
                                 <i class="icon-down-arrow"></i>
                             </button>
@@ -206,7 +234,7 @@
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                            <button class="accordion-button font-24 line-30 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                            <button class="accordion-button font-24 add-font line-30 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                                 <span>Doing business?</span>
                                 <i class="icon-down-arrow"></i>
                             </button>
@@ -219,7 +247,7 @@
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                            <button class="accordion-button font-24 line-30 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                            <button class="accordion-button font-24 add-font line-30 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
                                 <span>Doing business without advertising is like winking at a girl in the dark. You know what doing business without advertising is like winking at a girl in the dark. you know what?</span>
                                 <i class="icon-down-arrow"></i>
                             </button>
@@ -247,7 +275,7 @@
         <div class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-12">
                         <div class="footer-information">
                             <span>LET'S TALK</span>
 
@@ -260,7 +288,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-7 marg-t">
                         <div class="footer-menu">
                             <div class="footer-logo">
                                 <a href="">
@@ -270,22 +298,22 @@
 
                             <div class="footer-nav">
                                 <div class="row">
-                                    <div class="col-4">
-                                        <a href="" class="font-20">About us</a> 
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
+                                        <a href="" class="font-20">About us</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Blog</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Service</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Products</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Projects</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Contact</a>
                                     </div>
                                 </div>
@@ -295,7 +323,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="bottom-footer">
             <div class="container">
                 <div class="bottom-footer-info">
@@ -304,10 +332,11 @@
                 </div>
             </div>
         </div>
-        
+
     </footer>
 
     <script src="assets/js/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
