--- a/text-page.html
+++ b/text-page.html
@@ -17,7 +17,7 @@
         <div class="header">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-3 col-lg-3 col-md-3">
+                    <div class="col-xxl-3  col-lg-3 col-md-3 col-5">
                         <div class="logo">
                             <a href="#">
                                 <img src="assets/img/logo.png" alt="">
@@ -25,7 +25,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-9 col-lg-9 col-md-9">
+                    <div class="col-xxl-9 col-lg-9 col-md-9 col-sm-12">
                         <div class="menu-side">
                             <div class="wrap_nav">
                                 <nav class="menu btn-15">
@@ -54,6 +54,34 @@
                             </div>
 
                         </div>
+                    </div>
+                </div>
+                <div class="burger-menu">
+                    <div class="burger-lines">
+                        <div class="burger-line"></div>
+                        <div class="burger-line"></div>
+                        <div class="burger-line"></div>
+                    </div>
+                    <div class="burger-links">
+                        <!-- <div class="burger-search">
+                            <div class="quote burger-quote">
+                                <a href="">Get a Quote</a>
+                            </div>
+                            <div class="search burg-search">
+                                <a class="font-18" href="">
+                                    Search
+                                </a>
+                            </div>
+                            <div class="lang btn-15 burger-lang">
+                                <a href="" class="font-18" data-menu-name="En">Geo</a>
+                            </div>
+                        </div> -->
+                        <nav class="burger-nav">
+                            <li><a href="" data-menu-name="About">About</a></li>
+                            <li><a href="" data-menu-name="Service">Service</a></li>
+                            <li><a href="" data-menu-name="Projects">Projects</a></li>
+                            <li><a href="" data-menu-name="BLOG">BLOG</a></li>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -95,13 +123,13 @@
             <div class="text-page-cover">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-10" style="padding: 0;">
+                        <div class="col-lg-10 col-md-10 col-12" style="padding: 0;">
                             <div class="about-us-cover">
                                 <img src="assets/img/about-us.png" alt="">
                             </div>
                         </div>
 
-                        <div class="col-lg-2" style="padding: 0;">
+                        <div class="col-lg-2 col-md-2 col-12" style="padding: 0;">
                             <div class="team-label">
                                 <div class="team-title">
                                     <span>Growing by</span>
@@ -216,7 +244,7 @@
             <div class="home-about-text section-p">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xxl-6 col-lg-6 col-md-5">
+                        <div class="col-xxl-6 col-lg-6 col-md-5 col-12">
                             <div class="title">
                                 <h2><a href="" class="f-30">About us</a></h2>
                             </div>
@@ -227,7 +255,7 @@
 
                         </div>
 
-                        <div class="col-xxl-6 col-lg-6 col-md-7">
+                        <div class="col-xxl-6 col-lg-6 col-md-7 col-12">
                             <div class="brick-row brick-row-text">
                                 <div class="brick-column">
                                     <div class="brick">
@@ -263,14 +291,14 @@
         <section>
             <div class="testimonial-section">
                 <div class="container">
-                    <div class="testimonial">
+                    <div class="testimonial test2">
                         <div class="title">
-                            <h2 class="font-30">testimonial</h2>
+                            <h2 class="font-30">Testimonial</h2>
                         </div>
 
                         <div class="space-between">
                             <div class="tab w-47">
-                                <button class="tablinks" onclick="openCity(event, 'London')">
+                                <button class="tablinks" id="first-button" onclick="openCity(event, 'London')">
                                     <h4 class="font-20">SOCIETY FOR NATURE CONSERVATION (SABUKO)</h4>
                                     <span>Web design and Development</span>
                                     <div class="absolute-line"></div>
@@ -352,7 +380,7 @@
                             </div>
                         </div>
 
-                        <div class="link link-dark">
+                        <div class="link link-dark link3">
                             <a href="" class="font-20">See More</a>
                         </div>
 
@@ -372,7 +400,7 @@
                     <div class="accordion" id="accordionPanelsStayOpenExample">
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                            <button class="accordion-button font-24 line-30" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            <button class="accordion-button font-24 add-font line-30" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
                                 <span>simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard?</span>
                                 <i class="icon-down-arrow"></i>
                             </button>
@@ -385,7 +413,7 @@
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                            <button class="accordion-button font-24 line-30 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                            <button class="accordion-button font-24 add-font line-30 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                                 <span>Doing business?</span>
                                 <i class="icon-down-arrow"></i>
                             </button>
@@ -398,7 +426,7 @@
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                            <button class="accordion-button font-24 line-30 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                            <button class="accordion-button font-24 add-font line-30 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
                                 <span>Doing business without advertising is like winking at a girl in the dark. You know what doing business without advertising is like winking at a girl in the dark. you know what?</span>
                                 <i class="icon-down-arrow"></i>
                             </button>
@@ -426,7 +454,7 @@
         <div class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-12">
                         <div class="footer-information">
                             <span>LET'S TALK</span>
 
@@ -439,7 +467,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-6 col-lg-6 col-md-6">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-7 marg-t">
                         <div class="footer-menu">
                             <div class="footer-logo">
                                 <a href="">
@@ -449,22 +477,22 @@
 
                             <div class="footer-nav">
                                 <div class="row">
-                                    <div class="col-4">
-                                        <a href="" class="font-20">About us</a> 
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
+                                        <a href="" class="font-20">About us</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Blog</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Service</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Products</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Projects</a>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-xxl-4 col-lg-4 col-md-4 col-6">
                                         <a href="" class="font-20">Contact</a>
                                     </div>
                                 </div>
@@ -474,7 +502,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="bottom-footer">
             <div class="container">
                 <div class="bottom-footer-info">
@@ -483,11 +511,13 @@
                 </div>
             </div>
         </div>
-        
+
     </footer>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/slick.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.js"></script>
     <script type="text/javascript" src="assets/js/script.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 </body>
 </html>
